// Copyright 2018 The Goma Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package cache;

option go_package = "go.chromium.org/goma/server/proto/cache";

message KV {
  string key = 1;
  bytes  value = 2;
}

message GetReq {
  string key = 1;
  bool fast = 2;
}

message GetResp {
  KV kv = 1;
  bool in_memory = 2;
}

message PutReq {
  KV kv = 1;
  bool write_back = 2;
}

message PutResp {
}
